# MPPI-Generic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cost.cuh  dynamics.cuh  test_nn.npz
MPPI-Generic/: CMakeLists.txt
MPPI-Generic/examples/: CMakeLists.txt  cartpole_example.cpp  cartpole_example.cu
MPPI-Generic/include/controllers/: cartpole_mppi.cuh  controller.cuh
MPPI-Generic/include/controllers/MPPI/: mppi_controller.cu  mppi_controller.cuh
MPPI-Generic/include/controllers/Tube-MPPI/: tube_mppi_controller.cu  tube_mppi_controller.cuh
MPPI-Generic/include/controllers/autorally_mppi/: autorally_mppi.cuh
MPPI-Generic/include/controllers/cartpole_mppi/: cartpole_mppi.cuh
MPPI-Generic/include/cost_functions/: ar_standard_cost.cuh  cost.cuh
MPPI-Generic/include/cost_functions/autorally/: ar_robust_cost.cu  ar_robust_cost.cuh  ar_standard_cost.cu  ar_standard_cost.cuh
MPPI-Generic/include/cost_functions/cartpole/: cartpole_quadratic_cost.cu  cartpole_quadratic_cost.cuh
MPPI-Generic/include/cost_functions/double_integrator/: double_integrator_circle_cost.cu  double_integrator_circle_cost.cuh
MPPI-Generic/include/ddp/: ddp_model_wrapper.h  ddp_tracking_costs.h
MPPI-Generic/include/dynamics/: cartpole.cuh  dynamics.cuh
MPPI-Generic/include/dynamics/autorally/: ar_nn_model.cu  ar_nn_model.cuh
MPPI-Generic/include/dynamics/cartpole/: cartpole.cu  cartpole.cuh  cartpole_dynamics.cu  cartpole_dynamics.cuh
MPPI-Generic/include/dynamics/double_integrator/: di_dynamics.cu  di_dynamics.cuh
MPPI-Generic/include/mppi_core/: base_plant.hpp  mppi_common.cu  mppi_common.cuh  mppi_controller.cu  mppi_controller.cuh
MPPI-Generic/include/utils/: gpu_err_chk.cuh  managed.cuh  test_helper.h  type_printing.h
MPPI-Generic/kernel_tests/: CMakeLists.txt
MPPI-Generic/kernel_tests/cost_functions/: CMakeLists.txt  ar_robust_cost_kernel_test.cu  ar_robust_cost_kernel_test.cuh  ar_standard_cost.cu  ar_standard_cost_kernel_test.cu  ar_standard_cost_kernel_test.cuh
MPPI-Generic/kernel_tests/dynamics/: CMakeLists.txt  dynamics_generic_kernel_tests.cu  dynamics_generic_kernel_tests.cuh
MPPI-Generic/kernel_tests/mppi_core/: CMakeLists.txt  mppi_core_kernel_test.cu  mppi_core_kernel_test.cuh  normexp_kernel_test.cu  normexp_kernel_test.cuh  rollout_kernel_test.cu  rollout_kernel_test.cuh  weightedreduction_kernel_test.cu
MPPI-Generic/src/controllers/: CMakeLists.txt
MPPI-Generic/src/cost_functions/: CMakeLists.txt  ar_standard_cost.cu
MPPI-Generic/src/dynamics/: CMakeLists.txt  cartpole.cu
MPPI-Generic/src/mppi_core/: CMakeLists.txt  mppi_common.cu  mppi_controller.cu
MPPI-Generic/test/: CMakeLists.txt
examples/: CMakeLists.txt  cartpole_example.cpp  cartpole_example.cu  double_integrator_CORL2020.cu  double_integrator_example.cu
src/controllers/autorally/: CMakeLists.txt  autorally_mppi.cu
src/controllers/double_integrator/: CMakeLists.txt  double_integrator_mppi.cu
tests/: CMakeLists.txt  cartpole_dynamics_tests.cpp  cartpole_dynamics_tests.cu  lstm_lstm_helper_test.cu  test_main.cpp
tests/controllers/: CMakeLists.txt  controller_generic_tests.cu  controller_kernel_testing.cu  ddp_test.cu  rmppi_test.cpp  rmppi_test.cu  tube_mppi_test.cpp  tube_mppi_test.cu  vanilla_mppi_test.cpp  vanilla_mppi_test.cu
tests/cost_functions/: CMakeLists.txt  autorally_robust_cost_test.cu  autorally_standard_cost_test.cu  autorally_test_map.h.in  cartpole_quadratic_cost_test.cu  double_integrator_circle_cost_test.cu  general_cost_test.cu  general_quadratic_costs.cu  quadrotor_map_cost_test.cu  quadrotor_quadratic_cost_test.cu
tests/cuda_stream_tests/: CMakeLists.txt  cuda_stream_tests.cu
tests/dynamics/: CMakeLists.txt  ackerman_slip_tests.cu  angle_utils_test.cu  ar_dynamics_nn_test.cpp  ar_dynamics_nn_test.cu  autorally_test_network.h.in  bicycle_slip_engine_tests.cu  bicycle_slip_hybrid_test.cu  bicycle_slip_kinematic_test.cu  bicycle_slip_parametric_model_test.cu  bicycle_slip_test.cu  cartpole_dynamics_tests.cpp  cartpole_dynamics_tests.cu  di_dynamics_kernel_tests.cuh  double_integrator_dynamics_tests.cpp  double_integrator_dynamics_tests.cu  dubins_dynamics_tests.cu  dynamics_generic_tests.cu  linear_dynamics_tests.cu  linear_model_test.cu  lstm_dynamics_nn_test.cu  quadrotor_dynamics_tests.cu  racer_double_integrator_kinematic_test.cu  racer_dubins_elevation_lstm_steering_model_test.cu  racer_dubins_elevation_lstm_uncertainty_model_test.cu  racer_dubins_elevation_model_test.cu  racer_dubins_elevation_suspension_test.cu  racer_dubins_model_test.cu  racer_suspension_model_test.cu
tests/dynamics_tests/: CMakeLists.txt  cartpole_dynamics_tests.cpp  cartpole_dynamics_tests.cu
tests/feedback_controllers/: CMakeLists.txt  ddp_test.cu  generic_feedback_controller_test.cu
tests/include/kernel_tests/core/: rmppi_kernel_test.cu  (+6 more)
tests/integration/: CMakeLists.txt  integrator_tests.cu
tests/kernel_tests/: CMakeLists.txt  rollout_kernel_tests.cu
tests/math_utils/: CMakeLists.txt  cuda_math_utils_tests.cu  math_utils_test.cu
tests/misc/: CMakeLists.txt  di_dynamics_kernel_tests.cu  di_dynamics_kernel_tests.cuh  miscellaneous_tests.cu
tests/mppi_core/: CCM_tests.cu  CMakeLists.txt  base_plant_tester.cpp  base_plant_tester.cu  buffered_plant_tester.cu  controller_tester.cu  normexp_kernel_tests.cu  rmppi_kernel_tests.cu  rollout_kernel_tests.cpp  rollout_kernel_tests.cu  viz_kernels_test.cu  weightedreduction_kernel_tests.cu
tests/nn_helpers/: CMakeLists.txt  activation_functions_tests.cu  fnn_helper_test.cu  lstm_helper_test.cu  lstm_lstm_helper_test.cu
tests/sampling_distributions/: CMakeLists.txt  colored_noise_tests.cu  gaussian_noise_tests.cu  generic_sampling_distribution_tests.cu
tests/shaping_functions/: CMakeLists.txt  cem_shaping_function_test.cu  shaping_function_test.cu
tests/templated_headers/: autorally_test_map.h.in  autorally_test_network.h.in  racer_test_networks.h.in  test_networks.h.in
tests/texture_helpers/: CMakeLists.txt  texture_helper_test.cu  three_d_texture_helper_test.cu  two_d_texture_helper_test.cu
(+281 files in other folders)
